# brownfield_cartographer

./: .gitignore  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  TRP 1 Challenge Week 4_ The Brownfield Cartographer.md  app_ui.py  interim_report.tex  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run_commit  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/semantic_index/: purpose_index.json
docs/: architecture.mmd
jaffle_shop/.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run_commit  lineage_graph.json  module_graph.json  onboarding_brief.md
sample_lineage/models/: sample.sql
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  python_data_flow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  schema.py
